--- a/list.html
+++ b/list.html
@@ -50,7 +50,7 @@
         .icon>li{
         list-style: none;
             margin: 20px;
-            background: url('icon.png') no-repeat left center;
+            background: url('/assests/icon.png') no-repeat left center;
             background-size: 16px 16px; 
             padding-left: 24px;
         }
